tests/invalid/invalid-008.inox
Module Invalid008

Main() :
    var X := 10
    X := True
;
